--- a/タスク16.md
+++ b/タスク16.md
@@ -255,6 +255,142 @@ CDN や負荷分散を使う大規模 Web サービス
 - ChatGPT
 
 
+## システムをステートレスにするための認証方法にはどのような選択肢があるか
+
+#### 🔸 具体的にどの部分がわからなかったか
+- 各認証の種類・使い分け
+
+#### 🔸 解消手段・解消結果
+- ChatGPT
+
+##### 1. アクセストークン（JWTなど）
+- 認証後に署名付きトークンを払い出し、毎回リクエストで提示。  
+- サーバーは署名検証だけでユーザー識別できる。  
+👉 一般的な **OAuth2 / OIDC** の仕組み。  
+
+---
+
+##### 2. APIキー（固定トークン）
+- 各クライアントに **一意のランダムキー**を発行してリクエストに含める。  
+- サーバーはキーの正当性チェックだけ行う（DB or キャッシュに照会）。  
+- サーバー側に「ログイン状態」は保持しないのでステートレス。  
+👉 「ユーザー認証」よりも **アプリ認証・機械間通信**で利用されることが多い。  
+
+---
+
+##### 3. 署名付きリクエスト（HMAC署名）
+- AWS S3 の **Signature v4 認証**などの方式。  
+- リクエストごとに **秘密鍵＋リクエスト内容で HMAC 署名**をつける。  
+- サーバーは署名検証だけで正当性を判断。  
+👉 毎回リクエスト自体に認証情報が含まれるためステートレス。  
+
+---
+
+##### 4. mTLS（相互TLS）
+- 通信確立時に **クライアント証明書**で相互認証。  
+- セッションIDは不要で、証明書自体が認証手段になる。  
+- サーバーは「この証明書が信頼済み CA から発行されているか」だけ確認すればよい。  
+👉 **B2B API** や **内部システム間通信**に強力。  
+
+---
+
+##### 5. 署名付きURL（一時URL）
+- S3 Presigned URL のように、リソースごとに **署名＋有効期限**を含めた URL を発行。  
+- リクエストには認証ヘッダー不要。  
+- サーバーは署名の妥当性検証だけを行う。  
+👉 **ファイル配布**など「限定的アクセス」に適している。  
+
+---
+
+##### 6. パスキー / WebAuthn（公開鍵認証）
+- 認証情報（公開鍵）はサーバーに登録済み。  
+- 各リクエストで **署名チャレンジ**を検証するだけでよい。  
+👉 ユーザー認証として使えば、**セッションを持たずにリクエスト単位で安全に本人確認**が可能。  
+
+
+
+## http.MethodGetについて
+
+#### 🔸 具体的にどの部分がわからなかったか
+- 変数なのかパッケージなのか、何を表しているのか
+
+#### 🔸 解消手段・解消結果
+- ChatGPT
+```go
+const (
+    MethodGet     = "GET"
+    MethodHead    = "HEAD"
+    MethodPost    = "POST"
+    MethodPut     = "PUT"
+    MethodPatch   = "PATCH" // RFC 5789
+    MethodDelete  = "DELETE"
+    MethodConnect = "CONNECT"
+    MethodOptions = "OPTIONS"
+    MethodTrace   = "TRACE"
+)
+```
+
+
+## クロスオリジン通信が危険な理由
+
+#### 🔸 具体的にどの部分がわからなかったか
+- なぜ危険なのか
+
+#### 🔸 解消手段・解消結果
+- ChatGPT
+##### 1. CSRF（クロスサイトリクエストフォージェリ）の危険
+- ブラウザの JavaScript が任意のオリジンに自由にリクエストでき、Cookie も自動送信されると危険。
+- 悪意あるサイト `evil.com` がユーザーのブラウザで実行されると：
+  - ユーザーがログイン中の `bank.com` に勝手にリクエスト可能。
+  - セッション Cookie も自動送信される。
+  - **勝手に送金や設定変更が行われるリスク**。
+
+---
+
+##### 2. XSS（クロスサイトスクリプティング）の被害拡大
+- 悪意のスクリプトが入り込むと、自由に他オリジンへアクセス可能。
+- 例：悪意サイトが `https://mail.example.com` へリクエストし、メールを盗み見る。
+
+---
+
+##### 3. プライバシー流出
+- 異なるオリジンから勝手にデータを読めると危険。
+- ユーザーの行動やアカウント情報が**第三者に漏れる可能性**がある。
+
+
+### クロスオリジン通信が危険な理由
+
+#### 🔸 具体的にどの部分がわからなかったか
+- なぜ危険なのか
+
+#### 🔸 解消手段・解消結果
+- ChatGPT
+
+<ブラウザ側の管理>
+- ブラウザは **ホワイトリストを持っていない**。  
+- ルールは **同一オリジンポリシー（SOP）** で統一されている。  
+- クロスオリジン通信を例外的に許可するかどうかは、**サーバーが返すレスポンスヘッダ**で決まる。  
+- ブラウザはレスポンスを検証し、「このオリジンは許可されているか？」を**その都度判断**する。  
+
+
+### GraphQLを用いるメリット
+
+#### 🔸 具体的にどの部分がわからなかったか
+- GraphQLの仕組み・利用シーン
+
+#### 🔸 解消手段・解消結果
+- ChatGPT
+##### ✅ 背景：REST API の課題
+従来の REST API では、サーバーが固定の形でデータを返す仕組みになっています。
+そのため、以下のような問題が発生します。
+##### Over-fetching（取りすぎ問題）
+- `/user/1` を叩くと、必要なのは `name` だけなのに、住所や電話番号など **不要なデータまで返ってくる**。
+- 結果として、**ネットワーク負荷やレスポンスサイズが大きくなる**。
+##### Under-fetching（取り足りない問題）
+- `/user/1` で `name` は取れるが、`posts` も必要なら `/user/1/posts` を追加で叩く必要がある。
+- **複数リクエストが必要になり、通信回数が増えて遅くなる**。
+
+
 
 ---
 
