タスク14の修正

--- a/タスク14.md
+++ b/タスク14.md
@@ -66,14 +66,14 @@
 
 ## ❓ 不明点・疑問点
 
-### 関数とメソッド、クロージャの違い
+### 1. 関数とメソッド、クロージャの違い
 
 #### 🔸 具体的にどの部分がわからなかったか
 - それぞれが持つ意味の違いと使い分け
 
 #### 🔸 解消手段・解消結果
 - ChatGPT
-# Goにおける 関数・メソッド・クロージャ の違い
+Goにおける 関数・メソッド・クロージャ の違い
 
 | 項目       | 関数 (Function)      | メソッド (Method)          | クロージャ (Closure)                  |
 |------------|------------------------|-------------------------------|--------------------------------|
@@ -83,7 +83,7 @@
 | 例         | `add(2, 3)`              | `user.Greet()`        | `increment()` （呼ぶたびに状態が変化する）    |
 
 
-### メソッドとインターフェースの違い
+### 2. メソッドとインターフェースの違い
 
 #### 🔸 具体的にどの部分がわからなかったか
 - それぞれが持つ意味の違いと使い分け
@@ -108,7 +108,7 @@
 - 例：ファイルもソケットも「Readできる」なら同じ関数に渡せる  
 
 
-### ゴルーチンの実行の仕組みについて
+### 3. ゴルーチンの実行の仕組みについて
 
 #### 🔸 具体的にどの部分がわからなかったか
 - ゴルーチンで実行される処理は、どの処理と並列で実行されるのか
