タスク16.mdの作成

--- a/タスク16.md
+++ b/タスク16.md
@@ -9,17 +9,74 @@
 ---
 
 ## 🎯 学習目的
-- 
+- WEBアプリケーションの基礎部分を理解する
+- 各技術が生まれた背景や、実現可能なことを理解することによって、何故この技術が使われているのか、使うのかを理解しながら実装を行うことができる
+- 実際のWEBアプリケーションのコードを読むことにより、コーディングのイメージを掴む
 
 ---
 
 ## 📝 全体の感想
-- （学習してみて感じたことを自由に記載）
+- HTMLやJavaScript、Goを理解している前提で書かれているので、Goをまだそこまで理解できていない自分にとっては、一部のライブラリやメソッドの使い方などがわからず、コードを理解することに時間がかかる場合があった。
+- 技術が生まれた背景についての説明もあるため、何故その技術が存在するのか、使う必要があるのかを理解しながら実装を行うことができた。
 
 ---
 
 ## 📖 内容の要約
-- （理解した内容を簡潔にまとめる）
+
+### 全体構成
+- 1.技術の学び方
+- 2.WEBシステムの全体像
+- 3.WWWの基本要素
+- 4.HTTPクライアントとサーバ
+- 5.URLとHTTPリクエスト
+- 6.基礎的なWEBアプリケーション
+- 7.SPA
+- 8.WEB API
+- 9.サーバープッシュ技術
+
+#### 1.技術の学び方
+- IT技術が世の中に浸透し、技術の種類もますます多様化していく中で、それらを理解しながらシステムを作り上げることが難しくなってきたと同時に、エンジニアに求められる技術レベルも高まりつつある
+- 様々な技術が存在する中で、何か1つの技術のみを学ぶのではなく、まずはシステムの全体像を理解し、今学ぼうとしている技術がどのような位置付けにあるのか、その技術は他の技術とどのようなつながりがあるのかを理解しながら学んでいくことが重要になる
+
+#### 2.WEBシステムの全体像
+- クライアントサイドではデバイスの上にWEBブラウザが存在し、WEBブラウザの中にHTTPクライアントとレンダリングエンジン、JavaScriptエンジンなどが含まれる
+- クライアントサイドからサーバーサイドにリクエストが送られると、サーバーサイドのWEBアプリケーションが、必要に応じてデータベースと連携しながらそれに応じたレスポンスを返す
+
+#### 3.WWWの基本要素
+- 現代のシステムは、WWWという仕組みを用いてデータのやり取りが行われている
+- WWWの仕組みでは、それぞれの情報ソースにURIという一意のアドレスが付与され、HTTPを通じてそれぞれの情報ソースにアクセスすることができる
+- やり取りするデータの形式には、HTML(CSS)やXMLが使われる
+
+#### 4.HTTPクライアントとサーバ
+- ncコマンドとcurlコマンドを用いて、HTTPサーバとHTTPクライアントを立ち上げ、擬似的なHTTP通信を実現することができる
+
+#### 5.URLとHTTPリクエスト
+- URLはコンピュータのリソースを一意に特定する手法であり、主に、スキーム、ホスト、ポート、パス、クエリ、フラグメントで構成される
+- HTTPリクエストは、リクエストラインとヘッダー、ボディで構成され、リクエストラインは、メソッド、ターゲット、バージョンで構成される
+- HTTPレスポンスもほぼ同様だが、リクエストラインは、バージョン、ステータスコード、リーズンで構成される
+
+#### 6.基礎的なWEBアプリケーション
+- Go言語を用いて、Todoリストの追加とリダイレクトを可能にする簡単なWEBアプリケーションを作成する
+- WEBサーバは、クッキーを用いてユーザーのセッション情報を識別する
+- セッション情報を元に認証を行うTodoアプリをGo言語で作成する
+- WEBアプリケーションフレームワークは、認証、セッション管理、テンプレート、画面遷移、データベースアクセス支援などを効率的に実装できるメリットがある
+
+#### 7.SPA
+- Ajaxは、イベントドリブンプログラミングの仕組みを取り入れることによって、従来のアプリケーションの課題であった画面遷移やサーバー通知の課題を解消した。
+- Fetch APIを用いて非同期通信を行い、JSONデータをやり取りしてTodoリストの更新を行うWEBアプリを作成する
+- 検索エンジンとの相性の悪さと、初期表示の遅さというデメリットを解消するために、SSRという仕組みが用いられる
+
+#### 8.WEB API
+- RESTという概念では、コンテンツに含まれるそれぞれのデータ要素をリソースとして捉え、
+URLと紐付ける
+- WEB APIでは、CRUDという概念が用いられる
+- ブラウザには、デフォルトで同一オリジンポリシーが適用されているため、WEB APIを実装する上では、CORSという手法を用いて、クロスオリジン制限を回避する必要がある
+- GraphQLは、クライアントから欲しいデータの形式を指定することにより、APIの粒度が小さくなってしまうRESTful APIのN+1問題を解消することができる
+
+#### 9.サーバープッシュ技術
+- SSEは、サーバーサイドプッシュを実現するための技術の1つであり、データをチャンクに分けてクライアントからリクエストを送ることで、ポーリングによる通信量を削減することができる
+- WebSocketは、大量のデータを双方向に送受信する必要需要の増加に伴い生まれ、クライアントとサーバーの双方向のデータの送信を可能にする
+
 
 ---
 
@@ -400,7 +457,7 @@ const (
 ---
 
 ## 🛠️ コンテンツの改善点
-- （改善してほしい点、補足してほしい情報など）
-
+- 特にないが、一部のソースコードにおいて、JavaScriptなどにあまり馴染みのない方にとってはコードの理解に時間がかかってしまうように感じたため、必要に応じて他のコンテンツで埋める必要があると感じた。
+- コードを作成するというよりは、どちらかというとコードを読むという前提で進む部分がほとんどなので、実際にコードを書いて理解することができるとさらに理解が深まるのではないかと感じた。
 
 
