タスク17の作成

--- a/タスク18.md
+++ b/タスク18.md
@@ -1,34 +1,38 @@
 # 📌 タイトル
-- （ここにタイトルを記載）
+- React公式ガイド
 
 ---
 
 ## 💼 業務で活かす場面
-- コーディング  
-  （※実務でどのように応用できそうか）
+- フロントエンドアプリケーション(SPA)の構築
 
 ---
 
 ## 🎯 学習目的
-- コーディングの効率化 
-  （※目的を具体的に書く）
+- 実装方法の理解
 
 ---
 
 ## 📝 全体の感想
-- （学習してみて感じたことを自由に記載）
+- 
 
 ---
 
 ## 📖 内容の要約
 
 ### 全体構成
-- 知識をカテゴリ毎に整理
-- カテゴリ毎に、学んだ内容を一言で言い換える
-- 使い所をかく
+- UIの記述
+- インタラクティビティの追加
+- stateの管理
+- 避難ハッチ
 
-#### 各カテゴリの要約
-- 要約内容
+
+#### UIの記述
+- コンポーネントが他のコンポーネントをレンダーすることはできるが、定義をネストさせることはできない。
+- 
+
+
+
 
 ---
 
