タスク17の作成完了

--- a/タスク17.md
+++ b/タスク17.md
@@ -18,6 +18,7 @@
 - 全体的に説明が固め(大学の教科書のよう)でわかりにくく、理解するのに労力を要する。文章をそのまま読んでもスッと入ってこない部分が多々あり、ChatGPTに改めて質問を投げて理解する時間が大変だった。その結果、知っていた知識であったというケースもいくつかあった。
 - 定義がほとんど同じで似たようなオブジェクトや型などの概念が多く、違いを理解することに苦労した
 - インプット量が多く一気に詰め込んでも飽和してしまう可能性が高いため、実務に沿って優先度付けを行うとよりインプットしやすくなると感じた
+- 作って学ぶTypeScriptでは、学んだことを活せる部分は多くないものの、デプロイを体験するという観点においては、内容量もちょうどよく、アウトプットの場として良い機会になると感じた。
 
 ---
 
@@ -1405,17 +1406,220 @@ greetAlice();
 ```
 
 
+### npm createとnpx createの違いについて
+
+#### 🔸 具体的にどの部分がわからなかったか
+- 働きの違いや使い分け
+
+#### 🔸 解消方法・結果
+- ChatGPT
+どちらも プロジェクトの雛形を作るコマンド
+グローバルにツールをインストールしてなくても使える
+実際には npm レジストリからパッケージを一時的にダウンロードして実行している
+
+##### (1) フレームワークの違い
+`npm create vite@latest`
+Vite プロジェクトを作成
+軽量で高速なビルドツール、フレームワークに依存しない
+テンプレート指定で react, vue, svelte, preact など選べる
+`npx create-next-app`
+Next.js 専用プロジェクトを作成
+React ベースのフルスタックフレームワーク
+ルーティング、SSR、API Routes などフル機能付き
+
+##### (2) コマンドの仕組み
+`npm create vite@latest`
+npm create は npm init のシンタックスシュガー
+実際には create-vite@latest というパッケージを取得して実行している
+`npx create-next-app`
+npx は「パッケージを一時的にダウンロードして実行する」仕組み
+create-next-app パッケージを取得して実行
+👉 つまり「呼び出し方が違うだけ」で、どちらも create-xxx パッケージを叩いているのは共通。
+
+##### (3) オプションの扱い
+Vite:
+`npm create vite@latest my-app -- --template react-swc-ts`
+→ --template でテンプレートを選ぶ
+Next.js:
+`npx create-next-app random-cat`
+→ 対話形式で TypeScript/ESLint/Tailwind などを選べる（フラグで指定も可能）
+
+
+
+### npxプロジェクトを立ち上げる際の確認内容について
+
+#### 🔸 具体的にどの部分がわからなかったか
+- 働きの違いや使い分け
+
+#### 🔸 解消方法・結果
+- ChatGPT
+
+##### 1. Would you like to use App Router? (recommended)
+👉 App Router を使うかどうかの確認です。
+- Yes
+app/ ディレクトリを使った App Router ベースの新しいルーティングシステムが有効になる
+ページは app/page.tsx のように作る
+サーバーコンポーネント（React Server Components）やレイアウト、ストリーミングなど最新機能が利用可能
+- No
+旧来の Pages Router を使う
+ページは pages/index.tsx のように作る
+従来からのプロジェクトや一部ライブラリ互換のために残っている方式
+💡 新規開発なら基本的に App Router (Yes) が推奨です。
+
+##### 2. Would you like to use Turbopack for next dev?
+👉 開発サーバー (next dev) のバンドラとして Turbopack を使うかどうか。
+- Yes
+Rust 製の次世代ビルドツール「Turbopack」を使う
+Vite や esbuild よりもさらに高速を目指している
+まだ実験的なので、一部ライブラリや設定で不具合がある可能性もある
+- No
+既存の Webpack ベースの開発サーバーを使う
+安定性重視
+💡 新しい機能を試したいなら Yes、安定性重視なら No。
+
+##### 3. Would you like to customize the import alias (@/* by default)?
+👉 インポートパスのエイリアス設定をカスタマイズするかどうか。
+- Yes
+例えば @/components/Button のように使うデフォルトを変更できる
+自分のチームの流儀に合わせて ~/* や src/* などにできる
+- No
+デフォルトのまま（@/* → src/ 直下を指す）
+💡 エイリアスを設定しておくと、長い相対パス（例: ../../../components/Button）を書かずに済みます。
+
+
+### next.jsのset serverについて
+
+#### 🔸 具体的にどの部分がわからなかったか
+- 働きや利用目的について
+
+#### 🔸 解消方法・結果
+- ChatGPT
+##### 🔹 1. ローカル開発環境の場合
+npm run dev で立ち上がる開発サーバー（Node.js プロセス）の中で "use server" の関数が実行されます。
+つまり「自分の Mac の Node.js 上」がサーバー。
+
+##### 🔹 2. 本番デプロイの場合
+Next.js のアプリは どこにデプロイするかでサーバーの実体が変わります。
+(a) Vercel にデプロイした場合
+"use server" の関数は **Vercel のサーバーレス環境（Edge Functions や Serverless Functions）**で動きます。
+リクエストが来るたびにサーバー側でその処理が実行されます。
+(b) 自前で Node.js サーバーを建てる場合
+例えば AWS EC2, GCP, Heroku などに Next.js をデプロイすると、そのサーバーの Node.js 環境で "use server" 関数が実行されます。
+(c) Docker コンテナに入れて動かす場合
+コンテナの中の Node.js プロセスが「サーバー」として動く。
+
+##### 🔹 3. 「サーバー」の正体
+要するに、Next.js の "use server" が指している「サーバー」とは：
+ブラウザ（クライアント）側ではなく、Node.js が動いている環境
+デプロイ先によって、
+ローカルの開発サーバー
+Vercel のサーバーレス基盤
+AWS/GCP/Azure の VM やコンテナ
+などがサーバーの実体になる
+
+
+### SSRのためのサーバーとuse serverが指すサーバーの違いについて
+
+#### 🔸 具体的にどの部分がわからなかったか
+- 同上
+
+#### 🔸 解消方法・結果
+- ChatGPT
+##### 🔹 "use server" の「サーバー」
+これは 「関数をサーバーで実行させる」ための指定です。
+SSR そのものを指すのではなく、ユーザーの操作に応じた処理（DB操作、フォーム送信処理など）をブラウザではなくサーバーで行うための仕組み。
+例：
+```tsx
+"use server";
+
+export async function saveData(formData: FormData) {
+  // これはブラウザには送られない
+  // サーバー環境(Node.js)でだけ実行される
+  await db.user.create({ name: formData.get("name") });
+}
+```
+👉 "use server" は 「どこでその関数を実行するか」 を明示しているだけで、SSR か CSR かというレンダリング方式の話とは直接関係しません。
+
+##### 🔹 整理すると
+SSR のサーバー
+初回リクエストに応じて HTML をサーバーで生成する場所
+ページ全体をどう返すかのレイヤー
+"use server" のサーバー
+アプリの中の関数を ブラウザではなく Node.js 側で実行する場所
+個別のアクションやビジネスロジックを担うレイヤー
+👉 つまり 同じ Node.js 実行環境を指してはいるけれど、
+SSR は「ページレンダリング」
+"use server" は「関数実行」
+にフォーカスしている、という違いです。
+
+
+
+
+### next.jsのServer Actionsについて
+
+#### 🔸 具体的にどの部分がわからなかったか
+- 働きや利用目的について
+
+#### 🔸 解消方法・結果
+- ChatGPT
+##### 🔹 1. 前提
+SSR (Server-Side Rendering)
+→ ページリクエストに応じてサーバーで HTML を生成して返す仕組み。
+Server Actions ("use server")
+→ 特定の関数を「必ずサーバー上で実行」させる仕組み。
+（クライアントに配布されず、RPC のように呼び出される）
+どちらも「サーバー」と言っていますが、フォーカスが違うんです。
+
+##### 🔹 2. 「クライアント側で "use server" を指定する」は可能か？
+はい、可能です。
+クライアントコンポーネントのコードから サーバーアクションを呼び出すことはできます。
+例：
+```ts
+// actions.ts
+"use server";
+
+export async function saveData(formData: FormData) {
+  await db.user.create({ name: formData.get("name") });
+}
+
+// ClientComponent.tsx
+"use client";
+import { saveData } from "./actions";
+
+export default function ClientComponent() {
+  return (
+    <form action={saveData}>
+      <input name="name" />
+      <button type="submit">Save</button>
+    </form>
+  );
+}
+```
+👉 ここで ClientComponent はブラウザで動きますが、saveData は "use server" と書かれているので サーバー（Node.js 実行環境）で実行されるんです。
+
+##### 🔹 3. その「サーバー」とはどこ？
+この「サーバー」は SSR を実行しているのと同じサーバー環境です。
+ローカル開発なら → npm run dev で動いている Node.js
+Vercel なら → Vercel の Serverless/Edge Functions
+自前デプロイなら → EC2 / ECS / Lambda などの Node.js
+つまり：
+SSR → ページ全体をサーバーでレンダリング
+Server Actions ("use server") → クライアントからの呼び出しをサーバー側で処理
+👉 実体は同じサーバーだけど、役割が違う。
+
 
 ---
 
 ## 💡 その他気づいたこと
 - オブジェクト、配列を不変にするにはreadonlyプロパティが必要(チェックを受けるのはコンパイル時のみで、コンパイル後は代入可能になる)
 - インデックス型はオブジェクト型の一種
+- verselにnext.jsのアプリをpushする前に、アプリをgithubにプッシュしておく必要がある
+
 
 ---
 
 ## 🛠️ コンテンツの改善点
-- （改善してほしい点、補足してほしい情報など）
+- 情報のインプット量が多い、似たような概念が多い、説明が教科書的でわかりづらいなどが原因で、初めてTypeScriptを学ぶという前提ではインプットが難しいため、説明をもう少しわかりやすくするために、他の人がつまづいた部分をまとめておくか、インプットする情報の優先度付けを行って、飽和しないようにする必要があると感じる。
 
 
 
